# PIHARNESS

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  check-progress.sh  flappy.html  overnight.sh  piharness.sh  product-finder.html
.github/workflows/: deploy-demos.yml  deploy-pages.yml
.omc/plans/: product-finder.md
.planning/: ARCHITECTURE.md  PROJECT.md  ROADMAP.md  STATE.md
.planning/phases/01-self-evolving/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md
ade/: .gitignore  README.md  ade-context.py  ade-workspace.sh  package-lock.json  package.json
ade-demo/: index.html
ade/ade-mcp/: db.py  server.py
ade/src/: App.vue
ade/src-tauri/: Cargo.toml  tauri.conf.json
ade/src-tauri/capabilities/: default.json
ade/src-tauri/src/: lib.rs  main.rs  pty.rs
ade/src/assets/: main.css
demos/: demo-01-spawn-auto.sh  demo-02-status.sh  demo-04-self-evolve.sh  demo-05-supervise.sh  demo-06-usage.sh  index.html  package-lock.json  package.json  record-video.sh  vite.config.js
demos/recordings/: demo-01-spawn-auto.cast  demo-02-status.cast  demo-03-pipeline.cast  demo-04-self-evolve.cast  demo-05-supervise.cast  demo-06-usage.cast  demo-07-skill-list.cast
demos/scripts/: demo-03-pipeline.sh  demo-07-skill-list.sh  setup.sh
demos/src/: App.vue  style.css
docs/: index.html
mcp-server/: index.js  package.json
scripts/: sync-obsidian-vault.sh
server/: cache.js  index.js  package.json  test-api.js  test.html
server/routes/: search.js
server/scrapers/: amazon.js  bestbuy.js  newegg.js
(+24 files in other folders)
